--- a/menu.html
+++ b/menu.html
@@ -1,63 +1,65 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>menu</title>
-<link href="./css/sidebar.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<style>
+<!DOCTYPE html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>menu</title>
+  <link href="./css/sidebar.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <style>
 
-  body{
-    background-image: url('image/background_img.jpg');
-    background-size: cover;
-    background-position: center;
-  }
+    body{
+      background-image: url('image/background_img.jpg');
+      background-size: cover;
+      background-position: center;
+    }
 
-  table.menu {
-     width: 1000px;
-     border-collapse: separate;
-     border-spacing: 1px;
-     line-height: 4;
-     border-top: 1px solid #ccc;
-     font-size: 50;
-     margin : 10px;
-  }
+    table.menu {
+      width: 1000px;
+      border-collapse: separate;
+      border-spacing: 1px;
+      line-height: 4;
+      border-top: 1px solid #ccc;
+      font-size: 50;
+      margin : 10px;
+    }
 
-  .line{
-    width: 90%;
-    height: 2px;
-    background-color: rgb(200, 1, 80);
-  }
+    .line{
+      width: 90%;
+      height: 2px;
+      background-color: rgb(200, 1, 80);
+    }
 
-  .title{
-    font-size: 36px;
-    color: rgb(200,1,80);
-    font-weight: bold;
-  }
+    .title{
+      font-size: 36px;
+      color: rgb(200,1,80);
+      font-weight: bold;
+    }
 
-  .name{
-    font-size: 30px;
-    color: rgb(0,0,0);
-  }
-
-
-  .container{
-    width: 270px;
-    background-color: rgba(238, 238, 240, 0.3);
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    padding: 40px;
-    text-align: center;
-    border: none ;
-    border-radius: 20px;
-  }
-
-  .footer {
-    position: fixed;
-    bottom: 0px;
-  }
-</style>
+    .name{
+      font-size: 30px;
+      color: rgb(0,0,0);
+    }
 
 
+    .container{
+      width: 270px;
+      background-color: rgba(238, 238, 240, 0.3);
+      margin-right: auto;
+      margin-left: auto;
+      margin-top: 40px;
+      margin-bottom: 40px;
+      padding: 40px;
+      text-align: center;
+      border: none ;
+      border-radius: 20px;
+    }
+
+    .footer {
+      position: fixed;
+      bottom: 0px;
+    }
+  </style>
+</head>
 
 <body>
   <script>
@@ -115,11 +117,25 @@
  
      <button type="button" class="btn btn-danger" onclick="location.href='index.html'">로그아웃</button>
  
-     <div align="center" class="footer">
-       <img  src="image/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
-       <br><br>
-     </div>
- 
  </div>
   
 </body>
+
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
