버튼 색깔 수정

--- a/charge.html
+++ b/charge.html
@@ -36,10 +36,10 @@
          <hr color="rgb(200,1,80)" class="line">
          <p class="name"> 우리은행 201238213091 </p>
          <p class="name">
-         <button type="button" class="btn btn-primary btn-lg" onclick="charge(10000)" style="margin-right: 16px;">10000원 충전하기</button>
+         <button type="button" class="btn btn-danger btn-lg" onclick="charge(10000)" style="margin-right: 16px;">10000원 충전하기</button>
          </p>
          <p class="name">
-         <button type="button" class="btn btn-primary btn-lg" onclick="charge(30000)" style="margin-right: 16px;">30000원 충전하기</button>
+         <button type="button" class="btn btn-danger btn-lg" onclick="charge(30000)" style="margin-right: 16px;">30000원 충전하기</button>
          </p>
          <hr color="rgb(200,1,80)" class="line">
 
