--- a/menu.html
+++ b/menu.html
@@ -59,8 +59,8 @@
 
  
      <div class="container">
-       <button type="button" class="btn btn-primary btn-lg" onclick="location.href='charge.html'" style="margin-right: 16px;">충전</button>
-       <button type="button" class="btn btn-primary btn-lg" onclick="location.href='pay.html'" style="margin-left: 16px;">결제</button>
+       <button type="button" class="btn btn-danger btn-lg" onclick="location.href='charge.html'" style="margin-right: 16px;">충전</button>
+       <button type="button" class="btn btn-danger btn-lg" onclick="location.href='pay.html'" style="margin-left: 16px;">결제</button>
      </div>
 
      <button type="button" class="btn btn-danger" onclick="location.href='index.html'">로그아웃</button>
