--- a/laundry.html
+++ b/laundry.html
@@ -20,7 +20,7 @@
       <div align="center">
         <button type="button" class="button-back" onclick="location.href='./pay.html'">Back</button>
 
-        <table width="300px" align="center" border="5" bordercolor="white" bgcolor="white" class="table">
+        <table width="300px" align="center" class="table">
           <tr height="160px">
             <td align="center" bgcolor="#EEEEF0" class="block" onClick="location.href='laundry_reservation.html'">
               <font style="font-size: 16px;">RC 1층 0번</font><br>
