table 흰색 배경 투명하게

--- a/printer.html
+++ b/printer.html
@@ -35,7 +35,7 @@
       <hr color="rgb(102, 102, 92)" class="line">
       <button type="button" class="button-back" onclick="location.href='./pay.html'">Back</button>
 
-      <table width="300px" align="center" border="5" bordercolor="white" bgcolor="white" class="table">
+      <table width="300px" align="center" class="table">
         <tr height="160px">
           <td align="center" bgcolor="#EEEEF0" class="block" onclick="location.href='./print.html'">
             <font style="font-size: 16px;">청암 5층 1번</font><br><br>
