--- a/printrc.html
+++ b/printrc.html
@@ -38,7 +38,7 @@
       <hr color="rgb(102, 102, 92)" class="line">
       <button type="button" class="button-back" onclick="location.href='./printer.html'">Back</button>
 
-      <table width="300px" align="center" border="5" bordercolor="white" bgcolor="white" class="table">
+      <table width="300px" align="center" class="table">
         <tr height="40px">
           <td align="center" width="70%">Name</td>
           <td align="center" width="20%">page</td>
