투명 배경되면서 글씨체 굵기 수정

--- a/print.html
+++ b/print.html
@@ -39,7 +39,7 @@
       <button type="button" class="button-back" onclick="location.href='./printer.html'">Back</button>
 
       <table width="300px" align="center" class="table">
-        <tr height="40px">
+        <tr height="40px" style="font-weight:bold">
           <td align="center" width="70%">Name</td>
           <td align="center" width="20%">page</td>
         </tr>
